<resources>
    <string name="app_name">UrbanWheel</string>
    <string name="front_photo_name"></string>
    <string name="document_photo">Document Photo</string>
    <string name="insurance_photo">Insurance Photo</string>
    <string name="pollution_photo">Pollution Photo</string>
    <string name="permit_photo">Permit Photo</string>
    <string name="bank_details_photo">Bank Details Photo</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_number">Owner Number</string>
    <string name="alternate_no">Alternate No.</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="left_photo">Left Photo</string>
    <string name="back_photo">Back Photo</string>
    <string name="front_photo">Front Photo</string>
    <string name="fitness_photo">Fitness Photo</string>
    <string name="meter_photo">Meter Photo</string>
    <string name="rc_photo">RC Photo</string>
    <string name="right_photo">Right Photo</string>
    <string name="_88">88</string>
    <string name="azd">azd</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="dp">DP</string>
</resources>