<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity"
        android:verticalScrollbarPosition="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/front_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/azd"
                android:hint="@string/front_photo"
                android:textColorHint="#8D6E63"
                tools:ignore="InvalidId" />

            <Button
                android:id="@+id/front_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/back_photo"
                android:text=""
                android:textColorHint="#8D6E63"
                tools:ignore="DuplicateIds" />

            <Button
                android:id="@+id/back_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/left_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/left_photo"
                android:text=""
                android:textColorHint="#8D6E63"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/left_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/right_photo_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/right_photo"
                android:text=""
                android:textColorHint="#8D6E63"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/right_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fitness_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fitness_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/fitness_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meter_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/meter_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/meter_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/document_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/document_photo"
                android:text=""
                android:textColorHint="#8D6E63" />


            <Button
                android:id="@+id/document_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rc_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/rc_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/rc_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/insurance_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/insurance_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/insurance_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pollution_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pollution_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/pollution_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permit_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/permit_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/permit_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bank_photo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/bank_details_photo"
                android:text=""
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/bank_photo_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/owner_nm_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_name" />

            <EditText
                android:id="@+id/owner_nm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/owner_number"
                android:inputType="text"
                android:minHeight="48dp"
                android:text=""
                android:textColorHint="#8D6E63"
                tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/owner_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_number" />

            <EditText
                android:id="@+id/owner_no_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/_88"
                tools:ignore="HardcodedText,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/owner_alt_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alternate_no" />

            <EditText
                android:id="@+id/owner_alt_no_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alternate_no"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:text=""
                android:textColorHint="#8D6E63"
                tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/owner_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#EC0606"
                android:text="@string/email_id" />

            <EditText
                android:id="@+id/owner_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="TextFields,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        </LinearLayout>
        <Button
            android:id="@+id/details_submit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/submit"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>


</ScrollView>